<resources>
    <string name="app_name">Quality Seguridad y Salud</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_user">Nombre de usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="btn_login">Entrar</string>
    <string name="hint_filluser">Ingresa tu nombre de usuario</string>
    <string name="hint_password">Ingresa tu Contraseña</string>
    <string name="title_activity_login">Ingresar</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="msg_get_update_file">Obteniendo datos de actualización&#8230;</string>
    <string name="msg_connect_to_server">Contectando con servidor&#8230;</string>
    <string name="msg_update_database">Actualizando base de datos&#8230;</string>
    <string name="qst_not_connection_retry">No hay conexión con el servidor, ¿Desea reintentar?</string>
    <string name="ttl_error">Error</string>
    <string name="ttl_get_data">Obteniendo datos&#8230;</string>
    <string name="msg_invalid_login">El usuario o la contraseña son invalidos</string>
    <string name="ttl_invalid_login">Login Incorrecto</string>
    <string name="fld_type">Tipo de Servicio</string>
    <string name="fld_address">Domicilio</string>
    <string name="fld_customer">Cliente</string>
    <string name="fld_phone">Telefono</string>
    <string name="fld_description">Descripción</string>
    <string name="fld_service">Servicio</string>
    <string name="fld_employee">Elemento</string>
    <string name="btn_maps">Como llegar</string>
    <string name="btn_start_service">Iniciar Servicio</string>
    <string name="title_activity_general_review">GeneralReviewActivity</string>
    <string name="btn_photo">Foto</string>
    <string name="btn_comment">Nota</string>
    <string name="btn_next">Siguiente</string>
    <string name="ttl_general_checklist">Revisión General</string>
    <string name="title_activity_checkpoint_comment">Escribe la informacion solicitada</string>
    <string name="lbl_checkpoint_comment">Comentario</string>
    <string name="lbl_geo_mark_name">Aqui es</string>
    <string name="msg_generic_error">Ups!!, hubo un error, por favor intentalo nuevamente</string>
    <string name="msg_photo_take_successfully">Foto guardada.</string>
    <string name="title_activity_show_photo">ShowPhotoActivity</string>
    <string name="ttl_photo">Imagen</string>
    <string name="img_content_description">Imagen guardada en la aplicación</string>
    <string name="btn_take_new_photo">Tomar nueva foto</string>
    <string name="title_activity_staff_review_list">Selecciona un elemento</string>
    <string name="ttl_staff_review_list">Revisión de Personal</string>
    <string name="finish">Finalizar</string>
    <string name="img_staff_image">Imagen del personal</string>
    <string name="start">Iniciar</string>
    <string name="saved">Guardado</string>
    <string name="msg_error_connection">Problemas para conectarse al servidor, favor intente nuevamente</string>
    <string name="img_service">Imagen del servicio a realizar</string>
    <string name="title_activity_service_grid">Serivicios Actuales</string>
    <string name="title_activity_sector_list">Sectores</string>
    <string name="title_activity_service_detail">Detalle del Servicio</string>
    <string name="fld_code">Code</string>
    <string name="inst_select_service">Selecciona un servicio</string>
    <string name="title_activity_sector_service">Sectores y Servicios</string>
    <string name="title_element_list">Elements</string>
    <string name="title_element_detail">Element Detail</string>
    <string name="title_activity_staff_inventory">Inventario del Elemento</string>
    <string name="next">Siguiente</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="inst_equipment_exist_element">¿%s cuenta con el equipo descrito a continuacion?</string>
    <string name="inst_equipment_exist_service">¿El sercicio en %s cuenta con el equipo descrito a continuacion?</string>
    <string name="title_activity_identify_element">Identificación del Elemento</string>
    <string name="btn_try_again">Intentar Nuevamente</string>
    <string name="msg_read_barcode_try_again">Favor de intentar de leer el codigo nuevamente</string>
    <string name="msg_authenitcate">Autentificando&#8230;</string>
    <string name="msg_wrong_barcode">Codigo incorrecto para %s</string>
    <string name="msg_verify_barcode">Verificando codigo para %s&#8230;</string>
    <string name="msg_verify_user">Verificando usuario y contraseña</string>
    <string name="msg_error_recived_data">Error en los datos recividos, intente de nuevo o contacte a su proveedor</string>
    <string name="title_activity_staff_review">Pase de Revista</string>
    <string name="btn_questions">Examen</string>
    <string name="inst_staff_review">Selecciona \"Malo\" \"Bueno\" y \"Excelente\" segun sea el caso</string>
    <string name="bad">Malo</string>
    <string name="good">Bueno</string>
    <string name="excelent">Excelente</string>
    <string name="title_activity_service_inventory">Inventario del Servicio</string>
    <string name="previous">Atras</string>
    <string name="title_activity_survey">Examen</string>
    <string name="inst_survey">Selecciona la pregunta para contestarla</string>
    <string name="ttl_finish_service">Finalizar Servicio</string>
    <string name="msg_finish_service">¿Esta completamente seguro de finalizar el servicio y enviar los resultados?</string>
    <string name="btn_documents">Ver documentos</string>
    <string name="msg_fault_staff_inventory">El inventario no está completo</string>
    <string name="msg_fault_staff_review">El pase de revista del elemento no está completo</string>
    <string name="msg_cannot_finish_staff_review">No se puede finalizar la revisión del elemento</string>
    <string name="msg_fault_service_inventory">El inventario del servicio no esta completo</string>
    <string name="msg_there_are_employees_not_finalized">Existen elementos iniciados no finalizados</string>
    <string name="msg_cannot_finish_service">No se puede finalizar el servicio</string>
    <string name="msg_error_send">Problemas al enviar los datos: </string>
    <string name="msg_error_recieved">Problemas al recibir las actualizaciones: </string>
    <string name="msg_error_json_to_send">Error al construir el JSON para mandar</string>
    <string name="msg_warning_service_finalized">El servicio ha sido mandado, para empezar nuevamente tiene que esperar %1$d horas y %2$2d minutos</string>
    <string name="msg_warning_employee_finalized">El elemento ya se encuentra finalizado</string>
    <string name="title_activity_main_menu">Actividades</string>
    <string name="inst_select_activity">Selecciona una actividad</string>
    <string name="btn_comments">Comentarios</string>
    <string name="cnd_comment_button">Boton de comentario</string>
    <string name="cnd_btn_take_photo">Tomar una foto</string>
    <string name="mnu_comments">Comentarios</string>
    <string name="mnu_requisition">Requisición</string>
    <string name="mnu_warning">Crear Amonestación</string>
    <string name="inst_comment_inventory">Ingresa los comentarios para el item del inventario seleccionado</string>
    <string name="inst_comment_inventory_result">Ingresa los comentarios para el resultado del inventario</string>
    <string name="inst_comment_review">Ingresa los comentarios para el elemento del pase de revista seleccionado</string>
    <string name="inst_comment_review_result">Ingresa los comentarios el pase de revista</string>
    <string name="inst_comment_element_result">Ingresa los comentarios sobre los elementos</string>
    <string name="inst_comment_survey">Ingresa los comentarios sobre la pregunta seleccionada</string>
    <string name="inst_comment_survey_result">Ingresa los comentarios sobre el examen</string>
    <string name="msg_send_imgs">Envio de imagen de soporte</string>
    <string name="msg_send_imgs_start">Iniciando envío&#8230;</string>
    <string name="msg_send_imgs_sending">Enviando imagen&#8230;</string>
    <string name="msg_send_imgs_error_response">Problemas en la respuesta del servidor</string>
    <string name="msg_warning_other_desc_required">Se encuentra seleccionado Otro, la descripcion de Otro es requerida</string>
    <string name="msg_warning_at_least_one_warning">Al menos se tiene que seleccionar un motivo de amonestación</string>
    <string name="title_activity_summary">Resumen para %s</string>
    <string name="sum_inventory_fault">Inventario faltante:</string>
    <string name="sum_review_summary">Pase de revista para revisar:</string>
    <string name="sum_survey_summary">Examen:</string>
    <string name="sum_comment">Comentarios:</string>
    <string name="sum_result">Resultado:</string>
    <string name="sum_no_response">SIN RESPUESTA</string>
    <string name="sum_inventory_comment">Comentario sobre el inventario:</string>
    <string name="sum_review_comment">Comentario sobre el pase de revista:</string>
    <string name="sum_survey_comment">Comentario sobre el examen:</string>
    <string name="sum_employee_comment">Comentario sobre los empleados:</string>
    <string name="sum_no_important_data">Nada relevante para mostrar</string>
    <string name="btn_close">Cerrar</string>
    <string name="title_activity_notifications">Notificaciones</string>
    <string name="img_info">Imagen de información</string>
    <string name="btn_back">Atras</string>
    <string name="title_activity_requirement">Requisición</string>
    <string name="fld_agreement">Acuerdo y/o Compromiso</string>
    <string name="fld_assigned">Responsable</string>
    <string name="fld_place">Lugar</string>
    <string name="fld_progress">Avance</string>
    <string name="fld_date_start">Fecha de Inicio</string>
    <string name="fld_status">Status</string>
    <string name="fld_date_end">Fecha de Terminacion</string>
    <string name="btn_create_requirement">Crear requisición</string>
    <string name="title_requisition_list">Requisiciones</string>
    <string name="title_requisition_detail">Detalle de la requisición</string>
    <string name="img_btn_add">Agregar</string>
    <string name="img_btn_info">informacion</string>
    <string name="ttl_confirm_create_requisition">Confirmar Requisición</string>
    <string name="msg_confirm_requisition">¿Está seguro de crear esta requisición para %1$s con el acuerdo/compromiso \'%2$s\'?</string>
    <string name="msg_fault_requisition_data">El acuerdo/compromiso, el responsable y la fecha de inicio son requeridos</string>
    <string name="msg_confirm_warning">¿Está seguro de crear esta amonestación para %1$s con los siguientes motivos?: %2$s</string>
    <string name="msg_warning_created">Amonestación creada.</string>
    <string name="msg_without_documents">No hay documentos relacionados</string>
    <string name="title_warning_list">Amonestaciones de %s</string>
    <string name="title_warning_detail">Amonestación para %s</string>
    <string name="title_warning_dialog_create_title">Crear Amonestación</string>
    <string name="btn_create_warning">Crear Amonestación</string>
    <string name="lbl_notes">Observaciones</string>
    <string name="lbl_warning_reason">Motivo de la amonestación</string>
    <string name="lbl_others">Otros:</string>
    <string name="title_activity_service_history">Historico de servicios</string>
    <string name="inst_service_history">Selecciona un servicio para ver el detalle</string>
    <string name="title_activity_image_gallery">Imagenes</string>
    <string name="ttl_override_image">Sobreescribir Imagen</string>
    <string name="msg_override_image">¿Desea sustituir la imagen guardada?</string>
    <string name="ttl_delete_image">Eliminar Imagen</string>
    <string name="btn_delete">Borrar</string>
</resources>