<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/requisition_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.churpi.qualityss.client.RequisitionDetailFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/textService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fld_service"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textEmployee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fld_employee"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinEmployee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
            <TextView
                android:id="@+id/textAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fld_agreement"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editAgreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine|none" />

            <TextView
                android:id="@+id/textAssigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fld_assigned"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinAssigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/textProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fld_progress"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fld_status"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fld_date_start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/spinStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SpinnerAppTheme" />

            <TextView
                android:id="@+id/textEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fld_date_end"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/spinEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@android:id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/btn_create_requirement" />

    </FrameLayout>

</LinearLayout>

